# ETL-Ensino-Superior

./: LICENSE  main.py  pyproject.toml
