[project]
name = "etl-ensino-superior"
version = "0.1.0"
description = "An ETL pipeline for processing data from the Brazilian Higher Education Census (CENSUP)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
preview = true
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
disallow_untyped_defs = true
